Implemented first version of interalignment signatures detection